fix gap at bottom of page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,6 @@
+html {
+    overflow-x: hidden;
+}
 body {
     background-color: #262626;
     background-image: linear-gradient(45deg, #212121 25%, transparent 25%, transparent 75%, #212121 75%, #212121),
